DBはPostgreSQLなので[diesel](https://diesel.rs)を使う。
    cargo install diesel_cli
    diesel setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 authors = ["Taro Yamashita <taro.ymst@gmail.com>"]
 
 [dependencies]
+diesel = { version = "0.13.*", features = ["postgres"] }
+diesel_codegen = { version = "0.13.*", features = ["postgres"] }
+dotenv = "0.9.*"
 rocket = "0.2.*"
 rocket_codegen = "0.2.*"
