レスポンスはJSONを返す。
@see https://github.com/SergioBenitez/Rocket/blob/v0.2.6/examples/json/Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ diesel_codegen = { version = "0.13.*", features = ["postgres"] }
 dotenv = "0.9.*"
 rocket = "0.2.*"
 rocket_codegen = "0.2.*"
+serde = "0.9"
+serde_json = "0.9"
+serde_derive = "0.9"
+
+[dependencies.rocket_contrib]
+default-features = false
+features = ["json"]
